deploy: htw-imi-showtime/showtime-website@2c600cbb4d1d8188109154bf1c085e22fce512d8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 94aa140 
+</p><p>AbbreviatedHash: 2c600cb 
 </p><p>AuthorDate: 2026-01-26 
-</p><p>AuthorEmail: thanhngaxle@gmail.com 
-</p><p>AuthorName: Thanaee 
+</p><p>AuthorEmail: 89016793&#43;coderanian@users.noreply.github.com 
+</p><p>AuthorName: K. 
 </p><p>CommitDate: 2026-01-26 
-</p><p>Hash: 94aa140383b9d9cb24270bab8b6a9be7c9ea462d 
-</p><p>Subject: B1 - Second Release (#501) 
+</p><p>Hash: 2c600cbb4d1d8188109154bf1c085e22fce512d8 
+</p><p>Subject: M4 - Second Release (#491) 
 </p>
 
 
