--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 2c600cb 
+</p><p>AbbreviatedHash: ab4e0b5 
 </p><p>AuthorDate: 2026-01-26 
-</p><p>AuthorEmail: 89016793&#43;coderanian@users.noreply.github.com 
-</p><p>AuthorName: K. 
+</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
+</p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2026-01-26 
-</p><p>Hash: 2c600cbb4d1d8188109154bf1c085e22fce512d8 
-</p><p>Subject: M4 - Second Release (#491) 
+</p><p>Hash: ab4e0b5421520510d462c8384d369dda52060a13 
+</p><p>Subject: re-add logo for b3 
 </p>
 
 
