deploy: htw-imi-showtime/showtime-website@86b839525ff55941d63259026e6fd3debe9e55ac

--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
     <h3>Project Fair &amp; Presentations</h3>
     <div>
         The Bachelor and Master students of the International Media and Computing Study Programs present their Practice Projects with presentations and a Project Fair.
-It&rsquo;ll be great to see  you on  at  for the presentations and between  and  for the fair in Room H001 on our <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof!</a>
+It&rsquo;ll be great to see  you on 06/02/2026
+at 10:00
+for the presentations and between 12:00
+and 15:00
+for the fair in Room H001 on our <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof!</a>
 <a href="schedule">-&gt; check_the_schedule</a>
     </div>
     <hr>
