--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: ab4e0b5 
+</p><p>AbbreviatedHash: 86b8395 
 </p><p>AuthorDate: 2026-01-26 
 </p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
 </p><p>AuthorName: Charlotte John 
 </p><p>CommitDate: 2026-01-26 
-</p><p>Hash: ab4e0b5421520510d462c8384d369dda52060a13 
-</p><p>Subject: re-add logo for b3 
+</p><p>Hash: 86b839525ff55941d63259026e6fd3debe9e55ac 
+</p><p>Subject: add schedule for ws25/26 
 </p>
 
 
