--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 86b8395 
-</p><p>AuthorDate: 2026-01-26 
-</p><p>AuthorEmail: charlotte.john@student.htw-berlin.de 
-</p><p>AuthorName: Charlotte John 
-</p><p>CommitDate: 2026-01-26 
-</p><p>Hash: 86b839525ff55941d63259026e6fd3debe9e55ac 
-</p><p>Subject: add schedule for ws25/26 
+</p><p>AbbreviatedHash: 2f759dc 
+</p><p>AuthorDate: 2026-02-05 
+</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
+</p><p>AuthorName: Dzemal030 
+</p><p>CommitDate: 2026-02-05 
+</p><p>Hash: 2f759dc56ec52df48901f6f7f96e40bcc8175ad4 
+</p><p>Subject: B3 3d design workflow v3 (#505) 
 </p>
 
 
