--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 2f759dc 
+</p><p>AbbreviatedHash: 8f9e833 
 </p><p>AuthorDate: 2026-02-05 
-</p><p>AuthorEmail: dzemalnulldreinull@gmail.com 
-</p><p>AuthorName: Dzemal030 
+</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
+</p><p>AuthorName: so sa 
 </p><p>CommitDate: 2026-02-05 
-</p><p>Hash: 2f759dc56ec52df48901f6f7f96e40bcc8175ad4 
-</p><p>Subject: B3 3d design workflow v3 (#505) 
+</p><p>Hash: 8f9e8334af373bbbd5fa69c66bc01d96dd31bb1a 
+</p><p>Subject: M1 gradient escape - last train (#503) 
 </p>
 
 
