--- a/ws25/master/m1-gradient-escape/subpage_techstack/index.html
+++ b/ws25/master/m1-gradient-escape/subpage_techstack/index.html
@@ -587,8 +587,8 @@ M1
         <ul>
 <li><strong>Unity</strong></li>
 </ul>
-<p>Unity (v. 6.2) is a cross-platform game engine that provides a wide range of game development resources, including assets, game objects, and C#. It supports both 2D and 3D game development and offers web builds, making it an excellent option for small projects due to its free usage policy.
-<img src="/ws25/master/m1-gradient-escape/images/unity-logo-b.png" alt="Unity Logo" title="Unity Logo">
+<p>Unity (v. 6.2) is a cross-platform game engine that provides a wide range of game development resources, including assets, game objects, and C#. It supports both 2D and 3D game development and offers web builds, making it an excellent option for small projects due to its free usage policy.</p>
+<p><img src="/ws25/master/m1-gradient-escape/images/unity-logo-b.png" alt="Unity Logo" title="Unity Logo">
 <br><br></p>
 <ul>
 <li><strong>GitHub</strong></li>
