deploy: htw-imi-showtime/showtime-website@4df7c19ade67ff4828786cde99910572c4474d8b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8f9e833 
+</p><p>AbbreviatedHash: 4df7c19 
 </p><p>AuthorDate: 2026-02-05 
-</p><p>AuthorEmail: 23344740&#43;kapriole@users.noreply.github.com 
-</p><p>AuthorName: so sa 
+</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
+</p><p>AuthorName: Duaa Fourah 
 </p><p>CommitDate: 2026-02-05 
-</p><p>Hash: 8f9e8334af373bbbd5fa69c66bc01d96dd31bb1a 
-</p><p>Subject: M1 gradient escape - last train (#503) 
+</p><p>Hash: 4df7c19ade67ff4828786cde99910572c4474d8b 
+</p><p>Subject: B2 food4future ar campusguide (third release) (#502) 
 </p>
 
 
