--- a/projects/index.html
+++ b/projects/index.html
@@ -162,7 +162,7 @@
                         </h3>
                     </a>
                     <p>
-                     We bring the research on sustainable food at the HTW campus to life, using playful elements to show how the food of the future is cultivated 
+                     We bring the research on sustainable food at the HTW campus to life, using playful elements to show how the food of the future is cultivated. 
                     
                     </p>
                     <a href="/staging/ws25/bachelor/b2-food4future-ar-campusguide/">-> Details</a>
