--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -79,13 +79,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4df7c19 
-</p><p>AuthorDate: 2026-02-05 
-</p><p>AuthorEmail: 167181641&#43;Duaax24@users.noreply.github.com 
-</p><p>AuthorName: Duaa Fourah 
-</p><p>CommitDate: 2026-02-05 
-</p><p>Hash: 4df7c19ade67ff4828786cde99910572c4474d8b 
-</p><p>Subject: B2 food4future ar campusguide (third release) (#502) 
+</p><p>AbbreviatedHash: 9e37fb1 
+</p><p>AuthorDate: 2026-02-06 
+</p><p>AuthorEmail: thanhngaxle@gmail.com 
+</p><p>AuthorName: Thanaee 
+</p><p>CommitDate: 2026-02-06 
+</p><p>Hash: 9e37fb14b984ef1ffbe7d7fbd60383117bfc2673 
+</p><p>Subject: B1 release train 3 (#507) 
 </p>
 
 
